--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <html>
 	<head>
 		<title>Identity by HTML5 UP</title>
-        <link rel=icon href="33.thumbs-up.png">
+        <link rel=icon href="../33.thumbs-up.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-loading">
 
@@ -24,14 +24,14 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="../../../Pictures/Seger_Peter-c201.jpg" alt="" /></span>
+							<span class="avatar"><img src="Seger_Peter-c201.jpg" alt="" /></span>
 						  <h1>Peter Seger</h1>
 							<p>Computer Engineering Student</p>
                             <p>-Olin College of Engineering-</p>
 						</header>
 						<hr />
                         <p>Contact Me</p>
-                        <a href="ResumeFinal.pdf">Resume</a>
+                        <a href="../ResumeFinal.pdf">Resume</a>
                         <a>  |  </a>
                         <a href="mailto:contact@peterhenryseger.com">Email</a>
                        
