--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <html>
 	<head>
 		<title>Identity by HTML5 UP</title>
-        <link rel=icon href="../33.thumbs-up.png">
+        <link rel=icon href="33.thumbs-up.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="../assets/css/main.css" />
+		<link href="assets/css/main.css" rel="stylesheet" type="text/css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
+		<noscript><link href="assets/css/noscript.css" rel="stylesheet" type="text/css" /></noscript>
 	</head>
 	<body class="is-loading">
 
@@ -30,18 +30,18 @@
                             <p>-Olin College of Engineering-</p>
 						</header>
 						<hr />
-                        <p>Contact Me</p>
-                        <a href="../ResumeFinal.pdf">Resume</a>
+                      <p>Contact Me</p>
+                        <a href="ResumeFinal.pdf">Resume</a>
                         <a>  |  </a>
                         <a href="mailto:contact@peterhenryseger.com">Email</a>
                        
 					  <footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-twitter">Twitter</a></li>
-								<li><a href="#" class="fa-instagram">Instagram</a></li>
-								<li><a href="#" class="fa-facebook">Facebook</a></li>
+								<li><a href="https://twitter.com/swenadianpup" class="fa-twitter">Twitter</a></li>
+								<li><a href="https://www.instagram.com/swenadian/" class="fa-instagram">Instagram</a></li>
+								<li><a href="https://www.facebook.com/peter.seger.54" class="fa-facebook">Facebook</a></li>
 							</ul>
-						</footer>
+					  </footer>
 					</section>
 
 				<!-- Footer -->
