Links open in new tabs

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 						</header>
 						<hr />
                       <p>Contact Me</p>
-                        <a href="ResumeFinal.pdf">Resume</a>
+                        <a href="ResumeFinal.pdf" target="_blank">Resume</a>
                         <a>  |  </a>
                         <a href="mailto:contact@peterhenryseger.com">Email</a>
                        
 					  <footer>
 							<ul class="icons">
-								<li><a href="https://twitter.com/swenadianpup" class="fa-twitter">Twitter</a></li>
-								<li><a href="https://www.instagram.com/swenadian/" class="fa-instagram">Instagram</a></li>
-								<li><a href="https://www.facebook.com/peter.seger.54" class="fa-facebook">Facebook</a></li>
+								<li><a href="https://twitter.com/swenadianpup" target="_blank" class="fa-twitter">Twitter</a></li>
+								<li><a href="https://www.instagram.com/swenadian/" target="_blank" class="fa-instagram">Instagram</a></li>
+								<li><a href="https://www.facebook.com/peter.seger.54" target="_blank" class="fa-facebook">Facebook</a></li>
 							</ul>
 					  </footer>
 					</section>
