--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <p>-Olin College of Engineering-</p>
 						</header>
 						<hr />
-                      <p>Contact Me</p>
+                      <p>Contact Me:</p>
                         <a href="ResumeFinal.pdf" target="_blank">Resume</a>
                         <a>  |  </a>
                         <a href="mailto:contact@peterhenryseger.com">Email</a>
