Fixed contact button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                       <p>Contact Me:</p>
                         <a href="ResumeFinal.pdf" target="_blank">Resume</a>
                         <a>  |  </a>
-                        <button type="button" onclick="alert('contact@peterhenryseger.com | peter.seger@students.olin.edu')">Contact</button> 
+                        <a onclick="alert('contact@peterhenryseger.com | peter.seger@students.olin.edu')">Contact</a> 
                         
                         
 
