--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						</header>
 						<hr />
                       <p>Contact Me:</p>
-                        <a href="ResumeFinal.pdf" target="_blank">Resume</a>
+                        <a href="Resume.pdf" target="_blank">Resume</a>
                         <a>  |  </a>
                         <a onclick="alert('contact@peterhenryseger.com | peter.seger@students.olin.edu')">Contact</a> 
                         
