Fixed Google typo

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ sponsors to gather funding and organize exciting workshops for students. More in
 										<div class="4u"><span class="image fit"><img src="images/wanderers.jpg" alt="" /></span></div>
 										<h3>Wanderers</h3>
 										<p>Attended the MIT Media Lab's Reality Virtually Hackathon where I worked in a team of five to create a VR experience for people with anxiety. Went in with no previous experience
-in Javascript, C#, or Unity and created a bubbler feature using the newly release Good Daydream API to
+in Javascript, C#, or Unity and created a bubbler feature using the newly release Google Daydream API to
 utilize the wand. More information can be found at <a href="devpost.com/software/wanderers" target="_blank">devpost.com/software/wanderers</a></p>
 									</li>
 								</ul>
