Updated website with new projects

--- a/index.html
+++ b/index.html
@@ -64,6 +64,21 @@
 								</header>
 								<ul class="features">
 									<li>
+										<div class="4u"><span class="image fit"><img src="images/Supertictactoe/4_scaled.png" alt="" /></span></div>
+										<h3><a href="supertictactoe.html" target="_blank">Super Tic-Tac-Toe</a></h3>
+										<p>Worked with partner to create a multiplayer tic-tac-toe game. Using
+											<a href="https://pypi.python.org/pypi/python-socketio" target="_blank">Socket.io</a> and
+											<a href="http://www.pygame.org/news" target="_blank">PyGame</a>, players were able to
+											connect to a server and play. Created our own system to package, send, and recive game data.</p>
+									</li>
+									<li>
+										<div class="4u"><span class="image fit"><img src="images/TwitterFeels/Tester_4.jpg" alt="" /></span></div>
+										<h3><a href="TwitterFeels.html" target="_blank">TwitterFeels</a></h3>
+										<p>Created a Twitter bot to analyze the sentiment of users. Used the Twitter API and
+											<a href="https://github.com/cjhutto/vaderSentiment" target="_blank">VADER Sentiment analysis</a> to
+											visualize the emotions portrayed.</p>
+									</li>
+									<li>
 										<div class="4u"><span class="image fit"><img src="images/13147479_780922852007905_7671251760722609016_o (1).jpg" alt="" /></span></div>
 										<h3>Formula SAE Electric</h3>
 										<p>Working to design and build the car’s dashboard module which displays important driver data through the use
@@ -78,14 +93,14 @@ based learning by holding Wednesday night meetings with snacks, student-led work
 workshops. Worked to promote the club by creating a branded Facebook page, Instagram, and weekly email
 newsletter in HTML. Work with the leadership team to organize SLACfest, a festival of creativity during the
 spring semester which features an entire day of workshops, activities, and food. Work closely with corporate
-sponsors to gather funding and organize exciting workshops for students. More information can be found at <a href="slac.io" target="_blank">slac.io</a></p>
+sponsors to gather funding and organize exciting workshops for students. More information can be found at <a href="http://slac.io" target="_blank">slac.io</a></p>
 									</li>
 									<li>
 										<div class="4u"><span class="image fit"><img src="images/wanderers.jpg" alt="" /></span></div>
 										<h3>Wanderers</h3>
 										<p>Attended the MIT Media Lab's Reality Virtually Hackathon where I worked in a team of five to create a VR experience for people with anxiety. Went in with no previous experience
 in Javascript, C#, or Unity and created a bubbler feature using the newly release Google Daydream API to
-utilize the wand. More information can be found at <a href="devpost.com/software/wanderers" target="_blank">devpost.com/software/wanderers</a></p>
+utilize the wand. More information can be found at <a href="http://devpost.com/software/wanderers" target="_blank">devpost.com/software/wanderers</a></p>
 									</li>
 								</ul>
 								<footer class="major">
