Fixed url errors with social media links

--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@ utilize the wand. More information can be found at <a href="http://devpost.com/s
 								<dd><a href="#">contact@peterhenryseger.com</a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="twitter.com/swenadianpup" class="icon fa-twitter alt" target="_blank"><span class="label">Twitter</span></a></li>
-								<li><a href="facebook.com/peter.seger.54" class="icon fa-facebook alt"><span class="label" target="_blank">Facebook</span></a></li>
-								<li><a href="instagram.com/swenadian" class="icon fa-instagram alt"><span class="label" target="_blank">Instagram</span></a></li>
-								<li><a href="github.com/segerpeter07" class="icon fa-github alt"><span class="label" target="_blank">GitHub</span></a></li>
+								<li><a href="http://twitter.com/swenadianpup" class="icon fa-twitter alt" target="_blank"><span class="label">Twitter</span></a></li>
+								<li><a href="http://facebook.com/peter.seger.54" class="icon fa-facebook alt"><span class="label" target="_blank">Facebook</span></a></li>
+								<li><a href="http://instagram.com/swenadian" class="icon fa-instagram alt"><span class="label" target="_blank">Instagram</span></a></li>
+								<li><a href="http://github.com/segerpeter07" class="icon fa-github alt"><span class="label" target="_blank">GitHub</span></a></li>
 							</ul>
 						</section>
 						<p class="copyright">&copy; 2017 Peter Seger. | Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a>.</p>
