Updated resume and homepage to reflect new projects. Small additional changes to Barbot page.

--- a/BarBot.html
+++ b/BarBot.html
@@ -125,8 +125,15 @@
 
       <div class="row featurette" id='contact'>
         <div class="col-md-12">
+          <h2 class="featurette-heading">Get Barbot</h2>
+          <p class="lead">Fork our repository on <a href="https://github.com/segerpeter07/BarBot">Github</a> or just checkout how Barbot was made. Please be aware that Barbot is actively being developed and cannot be held responsible for any flawns in current or future releases.</p>
+        </div>
+      </div>
+
+      <div class="row featurette" id='contact'>
+        <div class="col-md-12">
           <h2 class="featurette-heading">Contact</h2>
-          <p class="lead">Feel free to reach out to the team to learn more about our project, express interest in the development of Barbot, or for licensing questions. You can also email <a href="mailto:contact@thebarbot.com">contact@thebarbot.com</a></p>
+          <p class="lead">Feel free to reach out to the team to learn more about our project, express interest in the development of Barbot, or for licensing questions.</p>
           <div class="col-md-3">
           </div>
           <div class="col-md-6">
@@ -153,7 +160,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017 FDF, Inc &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2017 FDF, Inc &middot;</p>
       </footer>
 
     </div><!-- /.container -->
