--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
 								</header>
 								<ul class="features">
 									<li>
+										<div class="4u"><span class="image fit"><img src="images/pcDash.png" alt="" /></span></div>
+										<h3><a href="BarBot.html" target="_blank">Barbot</a></h3>
+										<p>Project manager and system architect for a Python <a href="http://flask.pocoo.org">Flask</a> webapp for automated parties.
+											Built a full stack webapp with MySQL database, <a href="http://getbootstrap.com">Bootstrap</a> front end, and Flask app development.
+											Worked to layout the system and describe all functionality and worked with three other
+											team members with varying levels of experience to ensure everyone had impact.</p>
+									</li>
+
+									<li>
 										<div class="4u"><span class="image fit"><img src="images/Supertictactoe/4_scaled.png" alt="" /></span></div>
 										<h3><a href="supertictactoe.html" target="_blank">Super Tic-Tac-Toe</a></h3>
 										<p>Worked with partner to create a multiplayer tic-tac-toe game. Using
