Updates for 2017 school year

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
+							<li><a href="#experience">Experience</a></li>
 							<li><a href="#first">Projects</a></li>
 							<li><a href="#second">Interests</a></li>
 							<li><a href="#footer">Contact</a></li>
@@ -52,10 +53,28 @@
 								  <span class="image"><img src="images/Seger_Peter-c20.jpg" alt="" /></span>
 								</div>
 
-                                <ul class="actions">
-										<li><a href="Resume.pdf" class="button" target="_blank">Resume</a></li>
-									</ul>
 							</section>
+
+							<!-- Experience Section -->
+								<section id="experience" class="main special">
+									<header class="major">
+										<h2>Experience</h2>
+									</header>
+									<ul class="content">
+											<span class="image"><img src="images/schematic2.png" alt="" /></span>
+											<h2>Software Engineer Intern</h2>
+											<h4>Chalmers University, Gothenburg Sweden</h4>
+											<p>Worked with professor of formal verification to build a schematic drawing system in C.
+												Using an existing API in Functional Language (FL) to recreate functionality in C to
+												increase speed, accuracy, and dependability of the tool.</p>
+
+									</ul>
+									<footer class="major">
+										<ul class="actions">
+											<li><a href="#first" class="button">Projects</a></li>
+										</ul>
+									</footer>
+								</section>
 
 						<!-- First Section -->
 							<section id="first" class="main special">
@@ -63,6 +82,14 @@
 									<h2>Projects</h2>
 								</header>
 								<ul class="features">
+
+									<li>
+										<div class="4u"><span class="image fit"><img src="images/13147479_780922852007905_7671251760722609016_o (1).jpg" alt="" /></span></div>
+										<h3>Formula SAE Electric</h3>
+										<p>Worked last year to design and build the car’s dashboard module which displays important driver data through the use of micro controllers. Interfaces with the data logging system to record useful driver data. Designed custom PCBs in Altium Designer then proceeded to place components and program the boards using C.
+										<p>This year, I am Firmware Sub-Team Lead in charge of defining our software for the entire car. Designing, laying out, and implementing a custom API to ensure other student team members build software that is safe, stable, and efficient for the car.</p>
+									</li>
+
 									<li>
 										<div class="4u"><span class="image fit"><img src="images/pcDash.png" alt="" /></span></div>
 										<h3><a href="BarBot.html" target="_blank">Barbot</a></h3>
@@ -87,13 +114,7 @@
 											<a href="https://github.com/cjhutto/vaderSentiment" target="_blank">VADER Sentiment analysis</a> to
 											visualize the emotions portrayed.</p>
 									</li>
-									<li>
-										<div class="4u"><span class="image fit"><img src="images/13147479_780922852007905_7671251760722609016_o (1).jpg" alt="" /></span></div>
-										<h3>Formula SAE Electric</h3>
-										<p>Working to design and build the car’s dashboard module which displays important driver data through the use
-of micro controllers. Interfaces with the data logging system to record useful driver data. Designed custom
-PCBs in Altium Designer then proceeded to place components and program the boards using C.</p>
-									</li>
+
 									<li>
 										<div class="4u"><span class="image fit"><img src="images/slac.jpg" alt="" /></span></div>
 										<h3>SLAC</h3>
