--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
 											<span class="image"><img src="images/schematic2.png" alt="" /></span>
 											<h2>Software Engineer Intern</h2>
 											<h4>Chalmers University, Gothenburg Sweden</h4>
-											<p>Worked with professor of formal verification to build a schematic drawing system in C.
-												Using an existing API in Functional Language (FL) to recreate functionality in C to
-												increase speed, accuracy, and dependability of the tool.</p>
+											<p>Worked with professor building a design system for autonomous vehicles. My focus was to build a schematic visualization system in C. Used an existing API in Functional Language (FL) to recreate functionality in C to increase speed, accuracy, and dependability of the tool. Used advanced data structures and heuristics to create informative and accurate schematics from Register Transfer Language (RTL) descriptions.</p>
 
 									</ul>
 									<footer class="major">
