--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ utilize the wand. More information can be found at <a href="http://devpost.com/s
 								<p class="content">Ever since I was a young child I have been traveling the world. Raised by Canadian and Swedish parents, I learned early the value that travel holds. It has allowed me to visit places across the world and learn about cultures and people far different from my own. While I am at home, I have been actively involved in social good projects such as food pantries, soup kitchens, and homeless shelters. My mom has devoted her life to this work and constantly inspires me to think about others, especially those on the margins of society, whenever I do something. Photography and design are also massive parts of my life. I have been working as a professional photographer for about 5 years and shoot sports, landscapes, portraits, and more. Currently, I am underway on a yearlong photography project where I post a photo a day, every day.</p>
 								<footer class="major">
 									<ul class="actions">
-										<li><a href="https://petersegerphotography.com" target="_blank" class="button">Check out my photography</a></li>
+										<li><a href="http://petersegerphotography.com" target="_blank" class="button">Check out my photography</a></li>
 									</ul>
 								</footer>
 							</section>
