--- a/eigenvoice.html
+++ b/eigenvoice.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="Eigenvoice/assets/css/main.css" />
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
@@ -38,7 +39,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Eigenvoice</h1>
-							<p>A voice identification system that uses eigen-based linear algebra and voice synthesis system using a Hidden Markov Model (HMM) and Mel Log Spectrum Approximation Filtering.</p>
+							<p>A voice identification system that uses eigen-based linear algebra and Principal Component Analysis to identify voices.</p>
 							<p>Final project for Quantitative Engineering Analysis (QEA) at <a href="http://www.olin.edu/" target="_blank">Olin College</a>. Fall 2017.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
@@ -52,7 +53,7 @@
 							<h1>What it is</h1>
 							<p><span class="image right"><img src="Eigenvoice/images/speaker.png" alt="" /></span>
 								<p>Eigenvoices was a final project for Quantitative Engineering Analysis (QEA) where we explored audio processing and linear algebra in hopes of creating a voice identification algorithm and potentially a voice synthesis algorithm. Building off of a previous QEA unit where we explored linear algebra concepts to create a facial detection algorithm power by principal component analysis of the eigenvectors of an image, we sought to apply this concept to audio processing. Building off another unit where we performed digital signal processing, we wanted to apply the concepts of fourier transforms and frequency domain analysis to this project.</p>
-								<p>In the end...</p>
+								<p>In the end, we were not able to get voice synthesis working, but successfully got the system to identify voices. Using all our datasets, we were able to get an accuracy of ~40%. Read about our results <a href="#" target="_blank">here.</a></p>
 							<ul class="actions">
 								<li><a href="#two" class="button scrolly">Learn more</a></li>
 							</ul>
