Added Uber summer and used new resume template

--- a/index.html
+++ b/index.html
@@ -48,10 +48,18 @@
 										<header class="major">
 											<h2>About Me</h2>
 										</header>
-										<p>I was born and raised in Portland, OR in a family of engineers. Because of this I was exposed to the power of engineering at an early age. I enjoy solving complex, multi-disciplinary problems that work towards making the world a better place. I am a huge advocate for using technology for good, and I am excited for what the future holds.</p>
+										<p>I am an experienced full-stack developer who has worked on a myriad of projects ranging from embedded systems, visualization systems, to machine learning. Has worked on small scale projects all the way to large, distributed systems capable of handling thousands of queries per second. Experienced in frontend and backend services for projects at scale.</p>
+										<center>
+											<footer class="major">
+												<ul class="actions">
+													<li><a href="resume.pdf" class="button" target="_blank">Resume</a></li>
+												</ul>
+											</footer>
+										</center>
 								  </div>
 								  <span class="image"><img src="images/Seger_Peter-c20.jpg" alt="" /></span>
 								</div>
+
 
 							</section>
 
@@ -61,8 +69,19 @@
 										<h2>Experience</h2>
 									</header>
 									<ul class="content">
+										<span class="image"><img src="images/uber.jpg" alt="" /></span>
+										<h2>Full Stack Engineer Intern</h2>
+										<h4>Uber, San Francisco California</h4>
+										<p>Worked on the Customer Obsessions Answer Discovery team working on predictive intent for ranking of help articles on help.uber.com.
+											Here I designed and implemented a new backend service in Go for ingesting Kafka messages and interacting with ML models.
+											Worked on frontend serivces in NodeJS to add logging of user interactions.
+											Built multiple ETL pipelines for training ML models as well as included logging and metrics for services using ELK and Grafana.
+											My project was used as a proof of concept for a larger initiative and this architecture is now being used for in-app help</p>
+
+									</ul>
+									<ul class="content">
 											<span class="image"><img src="images/schematic2.png" alt="" /></span>
-											<h2>Software Engineer Intern</h2>
+											<h2>Software Engineering Intern</h2>
 											<h4>Chalmers University, Gothenburg Sweden</h4>
 											<p>Worked with professor building a design system for autonomous vehicles. My focus was to build a schematic visualization system in C. Used an existing API in Functional Language (FL) to recreate functionality in C to increase speed, accuracy, and dependability of the tool. Used advanced data structures and heuristics to create informative and accurate schematics from Register Transfer Language (RTL) descriptions.</p>
 
@@ -80,6 +99,14 @@
 									<h2>Projects</h2>
 								</header>
 								<ul class="features">
+
+									<li>
+										<div class="4u"><span class="image fit"><img src="images/strolle.png" alt="" /></span></div>
+										<h3><a href="https://strolle.ml/" target="_blank">Strolle</a></h3>
+										<p>Worked with partner to create a webapp for uploading and sharing runs including user accounts. Available at <a href="https://strolle.ml/" target="_blank">strolle.ml</a>
+											Built the frontend using React + Bootstrap and backend app using Express in NodeJS. Used MySQL for persistance layer.
+											Deployed with CI/CD pipeline using Jenkins, Docker containers, and Google Cloud Platform.</p>
+									</li>
 
 									<li>
 										<div class="4u"><span class="image fit"><img src="images/13147479_780922852007905_7671251760722609016_o (1).jpg" alt="" /></span></div>
@@ -133,7 +160,7 @@ utilize the wand. More information can be found at <a href="http://devpost.com/s
 								</ul>
 								<footer class="major">
 									<ul class="actions">
-										<li><a href="Resume.pdf" class="button" target="_blank">Resume</a></li>
+										<li><a href="resume.pdf" class="button" target="_blank">Resume</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -221,7 +248,7 @@ utilize the wand. More information can be found at <a href="http://devpost.com/s
 								<li><a href="http://github.com/segerpeter07" class="icon fa-github alt"><span class="label" target="_blank">GitHub</span></a></li>
 							</ul>
 						</section>
-						<p class="copyright">&copy; 2017 Peter Seger. | Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; 2018 Peter Seger. | Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
