Added PM resume

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 										<center>
 											<footer class="major">
 												<ul class="actions">
-													<li><a href="resume.pdf" class="button" target="_blank">Resume</a></li>
+													<li><a href="resume.pdf" class="button" target="_blank">Sofware Engineer Resume</a></li>
+													<li><a href="resume_PM.pdf" class="button" target="_blank">Product Manager Resume</a></li>
 												</ul>
 											</footer>
 										</center>
