Fixed type in description

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 										<header class="major">
 											<h2>About Me</h2>
 										</header>
-										<p>I am an experienced full-stack developer who has worked on a myriad of projects ranging from embedded systems, visualization systems, to machine learning. Has worked on small scale projects all the way to large, distributed systems capable of handling thousands of queries per second. Experienced in frontend and backend services for projects at scale.</p>
+										<p>I am an experienced full-stack developer who has worked on a myriad of projects ranging from embedded systems, visualization systems, to machine learning. I have worked on small scale projects all the way to large, distributed systems capable of handling thousands of queries per second. Experienced in frontend and backend services for projects at scale.</p>
 										<center>
 											<footer class="major">
 												<ul class="actions">
