Updated links to https

--- a/BarBot.html
+++ b/BarBot.html
@@ -137,7 +137,7 @@
           <div class="col-md-3">
           </div>
           <div class="col-md-6">
-            <form method="POST" action="http://formspree.io/segerpeter07@gmail.com">
+            <form method="POST" action="https://formspree.io/segerpeter07@gmail.com">
               <h4>First Name</h4>
               <input type="firstname" class="form-control" aria-describedby="basic-addon1" required>
               <h4>Last Name</h4>
