--- a/eigenvoice.html
+++ b/eigenvoice.html
@@ -26,7 +26,7 @@
 							<li><a href="#one">What it is</a></li>
 							<li><a href="#two">How it works</a></li>
 							<li><a href="#three">Do it yourself</a></li>
-							<li><a href="http://meet.olin.edu/olin-isms/quantitative-engineering-analysis-qea" target="_blank">Learn More about QEA</a></li>
+							<li><a href="https://meet.olin.edu/olin-isms/quantitative-engineering-analysis-qea" target="_blank">Learn More about QEA</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -40,7 +40,7 @@
 						<div class="inner">
 							<h1>Eigenvoice</h1>
 							<p>A voice identification system that uses eigen-based linear algebra and Principal Component Analysis to identify voices.</p>
-							<p>Final project for Quantitative Engineering Analysis (QEA) at <a href="http://www.olin.edu/" target="_blank">Olin College</a>. Fall 2017.</p>
+							<p>Final project for Quantitative Engineering Analysis (QEA) at <a href="https://www.olin.edu/" target="_blank">Olin College</a>. Fall 2017.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -130,7 +130,7 @@
 					<ul class="menu">
 						<li>Made with &hearts; at Olin College in Needham, MA. All rights reserved.</li>
 						<li><a href="https://github.com/segerpeter07/QEA-Sound-Reproduction" target="_blank" class="fa-github"><span class="label">GitHub</span></a></li>
-						<li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+						<li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
