--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 									<li>
 										<div class="4u"><span class="image fit"><img src="images/pcDash.png" alt="" /></span></div>
 										<h3><a href="BarBot.html" target="_blank">Barbot</a></h3>
-										<p>Project manager and system architect for a Python <a href="http://flask.pocoo.org">Flask</a> webapp for automated parties.
-											Built a full stack webapp with MySQL database, <a href="http://getbootstrap.com">Bootstrap</a> front end, and Flask app development.
+										<p>Project manager and system architect for a Python <a href="https://flask.pocoo.org">Flask</a> webapp for automated parties.
+											Built a full stack webapp with MySQL database, <a href="https://getbootstrap.com">Bootstrap</a> front end, and Flask app development.
 											Worked to layout the system and describe all functionality and worked with three other
 											team members with varying levels of experience to ensure everyone had impact.</p>
 									</li>
@@ -130,7 +130,7 @@
 										<h3><a href="supertictactoe.html" target="_blank">Super Tic-Tac-Toe</a></h3>
 										<p>Worked with partner to create a multiplayer tic-tac-toe game. Using
 											<a href="https://pypi.python.org/pypi/python-socketio" target="_blank">Socket.io</a> and
-											<a href="http://www.pygame.org/news" target="_blank">PyGame</a>, players were able to
+											<a href="https://www.pygame.org/news" target="_blank">PyGame</a>, players were able to
 											connect to a server and play. Created our own system to package, send, and recive game data.</p>
 									</li>
 									<li>
@@ -149,14 +149,14 @@ based learning by holding Wednesday night meetings with snacks, student-led work
 workshops. Worked to promote the club by creating a branded Facebook page, Instagram, and weekly email
 newsletter in HTML. Work with the leadership team to organize SLACfest, a festival of creativity during the
 spring semester which features an entire day of workshops, activities, and food. Work closely with corporate
-sponsors to gather funding and organize exciting workshops for students. More information can be found at <a href="http://slac.io" target="_blank">slac.io</a></p>
+sponsors to gather funding and organize exciting workshops for students. More information can be found at <a href="https://slac.io" target="_blank">slac.io</a></p>
 									</li>
 									<li>
 										<div class="4u"><span class="image fit"><img src="images/wanderers.jpg" alt="" /></span></div>
 										<h3>Wanderers</h3>
 										<p>Attended the MIT Media Lab's Reality Virtually Hackathon where I worked in a team of five to create a VR experience for people with anxiety. Went in with no previous experience
 in Javascript, C#, or Unity and created a bubbler feature using the newly release Google Daydream API to
-utilize the wand. More information can be found at <a href="http://devpost.com/software/wanderers" target="_blank">devpost.com/software/wanderers</a></p>
+utilize the wand. More information can be found at <a href="https://devpost.com/software/wanderers" target="_blank">devpost.com/software/wanderers</a></p>
 									</li>
 								</ul>
 								<footer class="major">
@@ -194,7 +194,7 @@ utilize the wand. More information can be found at <a href="http://devpost.com/s
 								<p class="content">Ever since I was a young child I have been traveling the world. Raised by Canadian and Swedish parents, I learned early the value that travel holds. It has allowed me to visit places across the world and learn about cultures and people far different from my own. While I am at home, I have been actively involved in social good projects such as food pantries, soup kitchens, and homeless shelters. My mom has devoted her life to this work and constantly inspires me to think about others, especially those on the margins of society, whenever I do something. Photography and design are also massive parts of my life. I have been working as a professional photographer for about 5 years and shoot sports, landscapes, portraits, and more. Currently, I am underway on a yearlong photography project where I post a photo a day, every day.</p>
 								<footer class="major">
 									<ul class="actions">
-										<li><a href="http://petersegerphotography.com" target="_blank" class="button">Check out my photography</a></li>
+										<li><a href="https://petersegerphotography.com" target="_blank" class="button">Check out my photography</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -208,7 +208,7 @@ utilize the wand. More information can be found at <a href="http://devpost.com/s
 							<ul class="actions">
 
                                 <section>
-										<form method="POST" action="http://formspree.io/contact@peterhenryseger.com">
+										<form method="POST" action="https://formspree.io/contact@peterhenryseger.com">
 											<div class="row uniform">
 												<div class="6u 12u$(xsmall)">
 
@@ -243,10 +243,10 @@ utilize the wand. More information can be found at <a href="http://devpost.com/s
 								<dd><a href="#">contact@peterhenryseger.com</a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="http://twitter.com/swenadianpup" class="icon fa-twitter alt" target="_blank"><span class="label">Twitter</span></a></li>
-								<li><a href="http://facebook.com/peter.seger.54" class="icon fa-facebook alt"><span class="label" target="_blank">Facebook</span></a></li>
-								<li><a href="http://instagram.com/swenadian" class="icon fa-instagram alt"><span class="label" target="_blank">Instagram</span></a></li>
-								<li><a href="http://github.com/segerpeter07" class="icon fa-github alt"><span class="label" target="_blank">GitHub</span></a></li>
+								<li><a href="https://twitter.com/swenadianpup" class="icon fa-twitter alt" target="_blank"><span class="label">Twitter</span></a></li>
+								<li><a href="https://facebook.com/peter.seger.54" class="icon fa-facebook alt"><span class="label" target="_blank">Facebook</span></a></li>
+								<li><a href="https://instagram.com/swenadian" class="icon fa-instagram alt"><span class="label" target="_blank">Instagram</span></a></li>
+								<li><a href="https://github.com/segerpeter07" class="icon fa-github alt"><span class="label" target="_blank">GitHub</span></a></li>
 							</ul>
 						</section>
 						<p class="copyright">&copy; 2018 Peter Seger. | Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a>.</p>
